# starfall-horizon

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cpp.yml
StarfallHorizon/: CMakeLists.txt
StarfallHorizon/include/framework/: Application.h
StarfallHorizon/src/: main.cpp
StarfallHorizon/src/framework/: Application.cpp
StarfallHorizonEngine/: CMakeLists.txt
StarfallHorizonEngine/include/: EntryPoint.h
StarfallHorizonEngine/include/framework/: Actor.h  Application.h  AssetManager.h  Core.h  MathUtility.h  Object.h  World.h
StarfallHorizonEngine/src/: EntryPoint.cpp
StarfallHorizonEngine/src/framework/: Actor.cpp  Application.cpp  AssetManager.cpp  MathUtility.cpp  Object.cpp  World.cpp
StarfallHorizonGame/: CMakeLists.txt  config.h.in
StarfallHorizonGame/include/: config.h
StarfallHorizonGame/include/gameFramework/: GameApplication.h
StarfallHorizonGame/include/spaceship/: Spaceship.h
StarfallHorizonGame/src/gameFramework/: GameApplication.cpp
StarfallHorizonGame/src/spaceship/: Spaceship.cpp
